# one-open-core

./: .gitignore  .gitlab-ci.yml  .taplo.toml  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  sonar-project.properties
docs/: cache.md  capabilities.md
docs/docker/: Dockerfile  README.md  nginx.conf
docs/one-core-docs-chart/: Chart.yaml  values.yaml
docs/one-core-docs-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/one-core-docs-chart/templates/tests/: test-connection.yaml
docs/one-core-docs-chart/values/: docs.procivis-one.yaml
examples/credential_example/: Cargo.toml
examples/credential_example/src/: main.rs
examples/did_resolution_example/: Cargo.toml
examples/did_resolution_example/src/: main.rs
examples/signature_example/: Cargo.toml
examples/signature_example/src/: main.rs
one-crypto/: Cargo.toml
one-crypto/src/: lib.rs  test.rs  utilities.rs
one-crypto/src/hasher/: sha256.rs
one-crypto/src/imp/: encryption.rs  mod.rs  password.rs  utilities.rs
one-crypto/src/imp/hasher/: sha256.rs
one-crypto/src/imp/signer/: bbs.rs  crydi3.rs  eddsa.rs  error.rs  es256.rs
one-crypto/src/signer/: bbs.rs  crydi3.rs  eddsa.rs  es256.rs  mod.rs
one-key-algorithm-provider/: Cargo.toml
one-key-algorithm-provider/src/: lib.rs  provider.rs
one-key-algorithm-provider/src/bbs/: mod.rs  test.rs
one-key-algorithm-provider/src/eddsa/: mod.rs  test.rs
one-key-algorithm-provider/src/es256/: mod.rs
one-open-core/: Cargo.toml
one-open-core/src/: config.rs  lib.rs  model.rs
one-open-core/src/service/: credential_service.rs  did_service.rs  error.rs  mod.rs  signature_service.rs
one-open-core/src/traits/: crypto.rs  mod.rs
one-open-core/src/traits/providers/: mod.rs
one-open-core/src/traits/providers/key_algorithm/: error.rs  mod.rs  model.rs  provider.rs
one-providers/: Cargo.toml
one-providers/src/: caching_loader.rs  common_mappers.rs  lib.rs
one-providers/src/common_dto/: mod.rs
one-providers/src/common_models/: claim.rs  claim_schema.rs  credential.rs  credential_schema.rs  did.rs  interaction.rs  key.rs  macros.rs  mod.rs  organisation.rs  proof.rs  proof_schema.rs
one-providers/src/credential_formatter/: error.rs  mod.rs  model.rs  provider.rs
one-providers/src/credential_formatter/imp/: common.rs  mod.rs  provider.rs
one-providers/src/credential_formatter/imp/json_ld/: mod.rs  model.rs  test.rs  test_utilities.rs
one-providers/src/credential_formatter/imp/json_ld/context/: mod.rs
one-providers/src/credential_formatter/imp/json_ld/context/caching_loader/: mod.rs  test.rs
one-providers/src/credential_formatter/imp/json_ld/context/storage/: in_memory_storage.rs  mod.rs
one-providers/src/credential_formatter/imp/json_ld_bbsplus/: base_proof.rs  derived_proof.rs  mapper.rs  mod.rs  model.rs  remove_undisclosed_keys.rs  test.rs  verify_proof.rs
one-providers/src/credential_formatter/imp/jwt/: mapper.rs  mod.rs  model.rs  test.rs
one-providers/src/credential_formatter/imp/jwt_formatter/: mapper.rs  mod.rs  model.rs  test.rs
one-providers/src/credential_formatter/imp/sdjwt_formatter/: disclosures.rs  mapper.rs  mod.rs  model.rs  test.rs  verifier.rs
one-providers/src/crypto/: mod.rs
one-providers/src/crypto/imp/: mod.rs  utilities.rs
one-providers/src/crypto/imp/hasher/: sha256.rs
one-providers/src/crypto/imp/signer/: bbs.rs  crydi3.rs  eddsa.rs  error.rs  es256.rs
one-providers/src/did/: error.rs  keys.rs  mod.rs  model.rs  provider.rs
one-providers/src/did/imp/: common.rs  dto.rs  jwk_helpers.rs  key_helpers.rs  mapper.rs  mod.rs  provider.rs  resolver.rs
one-providers/src/did/imp/jwk/: mod.rs  test.rs
one-providers/src/did/imp/key/: mod.rs  test.rs
one-providers/src/did/imp/universal/: mod.rs  test.rs
one-providers/src/did/imp/web/: mod.rs  test.rs
one-providers/src/exchange_protocol/: mod.rs  provider.rs
one-providers/src/exchange_protocol/imp/: mod.rs  provider.rs
one-providers/src/exchange_protocol/openid4vc/: error.rs  mapper.rs  mod.rs  model.rs  proof_formatter.rs  service.rs  test.rs  validator.rs
one-providers/src/exchange_protocol/openid4vc/imp/: mappers.rs  mdoc.rs  mod.rs  test.rs  utils.rs
one-providers/src/http_client/: mod.rs
one-providers/src/http_client/imp/: mod.rs  reqwest_client.rs
one-providers/src/key_algorithm/: error.rs  mod.rs  model.rs  provider.rs
one-providers/src/key_algorithm/imp/: mod.rs  provider.rs
one-providers/src/key_algorithm/imp/bbs/: mod.rs  test.rs
one-providers/src/key_algorithm/imp/eddsa/: mod.rs  test.rs
one-providers/src/key_algorithm/imp/es256/: mod.rs  test.rs
one-providers/src/key_storage/: error.rs  mod.rs  model.rs  provider.rs
one-providers/src/key_storage/imp/: mod.rs  provider.rs
one-providers/src/key_storage/imp/azure_vault/: dto.rs  mapper.rs  mod.rs  test.rs
one-providers/src/key_storage/imp/internal/: mod.rs  test.rs
one-providers/src/remote_entity_storage/: in_memory.rs  mod.rs
one-providers/src/revocation/: error.rs  mod.rs  model.rs  provider.rs
one-providers/src/revocation/imp/: mod.rs  provider.rs
one-providers/src/revocation/imp/bitstring_status_list/: jwt_formatter.rs  mod.rs  model.rs  resolver.rs  util.rs
one-providers/src/revocation/imp/lvvc/: dto.rs  mapper.rs  mod.rs  test.rs
one-providers/src/util/: bitstring.rs  caching.rs  key_verification.rs  mod.rs
src/traits/: mod.rs
