[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "one-providers",
    "one-open-core",
]

[workspace.dependencies]
thiserror          = { version = "1.0" }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
zeroize            = { version = "1.8" }

[patch.crates-io]
json-ld = { git = "https://github.com/strozynskiw/json-ld-rustls", rev = "cfab4c341b4c2514aa3c5799a0494c5b399692a6" }
