[package]
name = "one-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
ct-codecs             = "1.1.1"
rand                  = "0.8.5"
rand_chacha           = { version = "0.3" }
hmac                  = { version = "0.12" }
sha2                  = { version = "0.10" }
one-open-core         = { version = "0.1.0", path = "../one-open-core/" }
chacha20poly1305      = { version = "0.10" }
pairing_crypto        = { version = "0.4", git = "https://github.com/Iskander508/pairing_crypto", rev = "517a424a989b57b987aacb3642bd7cd2c60b94d1" }
thiserror             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
pbkdf2                = { version = "0.12", features = ["simple"] }
pqc_dilithium         = { version = "0.2.0", git = "https://github.com/ihor-rud/dilithium", rev = "e02a683" }
ed25519-compact       = { version = "2.1", features = ["pem"] }
p256                  = { version = "0.13", features = ["arithmetic", "jwk"] }