[package]
name    = "one-crypto"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
thiserror        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
ed25519-compact  = { version = "2.1" }
p256             = { version = "0.13", features = ["jwk"] }
pairing_crypto   = { version = "0.4", git = "https://github.com/Iskander508/pairing_crypto", rev = "517a424a989b57b987aacb3642bd7cd2c60b94d1" }
mockall          = { version = "0.13", optional = true }
hmac             = { version = "0.12" }
rand             = { version = "0.8" }
rand_chacha      = { version = "0.3" }
sha2             = { version = "0.10" }
pbkdf2           = { version = "0.12", features = ["simple"] }
chacha20poly1305 = { version = "0.10" }
pqc_dilithium    = { version = "0.2.0", git = "https://github.com/ihor-rud/dilithium", rev = "e02a683" }
ct-codecs        = { version = "1.1.1" }


[dev-dependencies]
mockall = { version = "0.13" }

[features]
mock = ["mockall"]
