[package]
name    = "one-open-core"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
one-providers = { version = "0.1.0", path = "../one-providers" }
thiserror     = { workspace = true }
zeroize       = { workspace = true }
strum         = { version = "0.26" }
strum_macros  = { version = "0.26" }
time          = { version = "0.3", features = ["formatting", "macros", "parsing"], workspace = true }

[package.metadata.cargo-machete]
ignored = ["strum"]
