[package]
name = "one-providers"
version = "0.1.0"
edition = "2021"
publish=false

[dependencies]
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
zeroize            = { workspace = true, features = ["serde"] }
ed25519-compact    = { version = "2.1" }
p256               = { version = "0.13", features = ["jwk"] }
bs58               = { version = "0.5" }
blstrs             = { version = "0.7" }
josekit            = { version = "0.8", features = ["vendored"] }
pairing_crypto     = { version = "0.4", git = "https://github.com/Iskander508/pairing_crypto", rev = "517a424a989b57b987aacb3642bd7cd2c60b94d1" }
mockall            = { version = "0.12", optional = true }
hmac               = { version = "0.12" }
rand               = { version = "0.8" }
rand_chacha        = { version = "0.3" }
sha2               = { version = "0.10" }
pbkdf2             = { version = "0.12", features = ["simple"] }
chacha20poly1305   = { version = "0.10" }
pqc_dilithium      = { version = "0.2.0", git = "https://github.com/ihor-rud/dilithium", rev = "e02a683" }
anyhow             = { version = "1.0.86" }
ct-codecs          = { version = "1.1.1" }
uuid               = { version = "1.10.0", features = ["v4", "serde"] }
async-trait        = { version = "0.1.81" }
time               = { version = "0.3", features = ["formatting", "macros", "parsing"] }
cocoon = "0.4.2"
url                = { version = "2.5", features = ["serde"] }
tokio = "1.38.0"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json"] }
futures            = { version = "0.3" }
json-syntax        = { version = "0.9" }
locspan            = { version = "0.7" }
json-ld            = { version = "0.15" }
mime               = { version = "0.3" }
rdf-types          = { version = "0.15" }
sophia_jsonld      = { version = "0.8", features = ["http_client"] }
sophia_api         = { version = "0.8" }

[dev-dependencies]
mockall         = { version = "0.12" }
wiremock        = { version = "0.6" }

[features]
mock            = ["mockall"]
