[package]
name    = "credential-example"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
one-open-core = { path = "../../one-open-core" }
one-providers = { path = "../../one-providers" }
tokio         = { version = "1.38.1", features = ["full"] }
time          = { version = "0.3", features = ["formatting", "macros", "parsing"] }
uuid          = { version = "1.10.0", features = ["v4"] }
